<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    
    <string name="username_hint">Имя пользователя</string>
    <string name="email_hint">Электронная почта</string>
    <string name="password_hint">Пароль</string>
    <string name="phone_hint">Номер телефона</string>
    <string name="iin_hint">ИИН</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>

    <string name="login_button">Войти</string>
</resources>
