<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:autofillHints="username"
        android:padding="10dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="10dp" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:autofillHints="phone"
        android:padding="10dp" />

    <EditText
        android:id="@+id/iinEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/iin_hint"
        android:inputType="number"
        android:autofillHints="person"
        android:padding="10dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_marginTop="20dp"
        android:padding="10dp" />
</LinearLayout>